# environments

./: .gitignore  Makefile  README.md
basic-env/: pyproject.toml
discord-bot/: pyproject.toml
micro-env/: pyproject.toml
mini-env/: pyproject.toml
work-env/: pyproject.toml
