[project]
name = "discord-bot"
description = "Default working environment"
authors = [{ name = "Matthew S. B. Coleman", email = "msbc@princeton.edu" }]
maintainers = [{ name = "Matthew S. B. Coleman", email = "msbc@princeton.edu" }]
dynamic = ["version"]
requires-python = ">=3.8"
dependencies = [
  "pytz",
  "humanize",
  "numpy",
  "ephem",
  "gitpython",
  "pynacl",
  "tweepy[async]",
  "discord.py[voice]",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
