[project]
name = "mini-env"
description = "Mini environment"
authors = [{ name = "Matthew S. B. Coleman", email = "msbc@princeton.edu" }]
maintainers = [{ name = "Matthew S. B. Coleman", email = "msbc@princeton.edu" }]
dynamic = ["version"]
requires-python = ">=3.10"
dependencies = [
  "h5py",
  "jupyter",
  "matplotlib",
  "numpy",
  "ruff",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
