[project]
name = "work-env"
description = "Default working environment"
authors = [{ name = "Matthew S. B. Coleman", email = "msbc@princeton.edu" }]
maintainers = [{ name = "Matthew S. B. Coleman", email = "msbc@princeton.edu" }]
dynamic = ["version"]
requires-python = ">=3.10"
dependencies = [
  "astropy",
  "build",
  "cmasher",
  "cmcrameri",
  "cmocean",
  "codecov",
  "grayskull",
  "h5py",
  "helmeos",
  "humanize",
  "jupyter",
  "jupyterthemes",
  "matplotlib",
  "mpi4py",
  "mpmath",
  "numpy",
  "pandas",
  "pillow",
  "proplot",
  "pybind11",
  "pytest",
  "pytz",
  "rebound",
  "ruff",
  "scipy",
  "seaborn",
  "sympy",
  "tox",
  "twine",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
